# zalgo_codec

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  README.md.lnk
.github/: dependabot.yml
.github/workflows/: rust.yml
codec/: .markdownlint.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
codec/src/: gui.rs  lib.rs  main.rs
common/: .markdownlint.json  CHANGELOG.md  Cargo.toml  LICENCE  LICENSE-APACHE  LICENSE-MIT  README.md
common/benches/: codec_bench.rs  original.txt
common/fuzz/: Cargo.toml
common/fuzz/fuzz_targets/: fuzz_zalgostring.rs  fuzz_zalgostring_new.rs  fuzz_zalgostring_push_str.rs
common/src/: error.rs  files.rs  lib.rs  zalgo_string.rs
common/src/zalgo_string/: iterators.rs  mod.rs
macro/: .markdownlint.json  CHANGELOG.md  Cargo.toml  LICENCE  LICENSE-APACHE  LICENSE-MIT  README.md
macro/src/: lib.rs
src/: lib.rs
tests/: lorem.py  romeo.txt
wrapper/: Cargo.toml
wrapper/src/: main.rs
zalgo/: Cargo.toml
zalgo/src/: main.rs
zalgofy/: Cargo.toml
zalgofy/src/: main.rs
