[package]
name = "zalgo-codec"
authors = ["Johanna Sörngård (jsorngard@gmail.com)", "Scott Conner", "Alex Keizer (alex@keizer.dev)"]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/JSorngard/zalgo_codec"
description = "A crate for converting an ASCII text string or file to a single unicode character. Provides a macro for executing source code that has been encoded in this way. Can do the same to python code while still letting the code run as before by wrapping it in a decoder."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zalgo-codec-common = "0.2.6" 
zalgo-codec-macro = "0.1.2"

[workspace]
members = [
    "common",
    "macro"
]

