[package]
name = "zalgo-codec"
authors = ["Johanna Sörngård (jsorngard@gmail.com)", "Scott Conner", "Alex Keizer (alex@keizer.dev)"]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/JSorngard/zalgo_codec"
description = "A crate for converting an ASCII text string to a single unicode grapheme cluster. Provides a macro for executing source code that has been encoded in this way. Also provides a function to encode Python code and wrap it in a decoder, so that it retains its functionality."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zalgo-codec-common = {path = "./common"}
zalgo-codec-macro = {path="./macro"}

[dev-dependencies]
rand = "0.8"

[workspace]
members = [
    "common",
    "macro"
]

