[package]
name = "zalgo-codec-common"
authors = ["Johanna Sörngård (jsorngard@gmail.com)", "Scott Conner"]
version = "0.10.1"
edition = "2021"
keywords = ["unicode", "obfuscation", "encoding", "zalgo"]
license = "MIT OR Apache-2.0"
description = "A crate for converting an ASCII text string to a single unicode grapheme cluster and back."
repository = "https://github.com/JSorngard/zalgo_codec/tree/main/common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", default_features = false, features = ["alloc", "derive"], optional = true}

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
rand = "0.8"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

# Implements the [`Serialize`] and [`Deserialize`] traits from serde for the [`ZalgoString`] struct.
serde = ["dep:serde"]

# Implements the [`std::error::Error`] trait for [`zalgo_codec_common::Error`]
std = []

[[bench]]
name = "codec_bench"
harness = false
