[package]
name = "zalgo-codec-common"
authors = ["Johanna Sörngård <jsorngard@gmail.com>", "Scott Conner"]
version = "0.13.0"
edition = "2021"
keywords = ["unicode", "obfuscation", "encoding", "zalgo"]
categories = ["encoding", "text-processing"]
license = "MIT OR Apache-2.0"
description = "Convert an ASCII text string into a single unicode grapheme cluster and back."
repository = "https://github.com/JSorngard/zalgo_codec/tree/main/common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
rkyv = { version = "0.8", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
rand = { version = "0.8", default-features = false }

[package.metadata.docs.rs]
# Document all features.
all-features = true

[features]
default = ["std"]

# Derives the `Serialize` and `Deserialize` traits from [`serde`](https://crates.io/crates/serde) for the `ZalgoString` struct.
serde = ["dep:serde"]

# Derives the `Serialize`, `Deserialize`, and `Archive` traits from [`rkyv`](https://crates.io/crates/rkyv) for the `ZalgoString` struct.
rkyv = ["dep:rkyv"]

# Enables the `Error` type to capture a `Backtrace`.
# Without this feature the crate is `no_std` compatible, but still uses the `alloc` crate.
std = ["serde?/std", "rkyv?/std"]

[[bench]]
name = "codec_bench"
harness = false
