[package]
name = "zalgo-codec-common"
authors = ["Johanna Sörngård <jsorngard@gmail.com>", "Scott Conner"]
version = "0.13.4"
edition = "2021"
keywords = ["unicode", "obfuscation", "encoding", "zalgo"]
categories = ["encoding", "text-processing"]
license = "MIT OR Apache-2.0"
description = "Convert an ASCII text string into a single unicode grapheme cluster and back."
repository = "https://github.com/JSorngard/zalgo_codec/tree/main/common"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"], optional = true }
bytecheck = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[package.metadata.docs.rs]
# Document all features.
all-features = true

[features]
# Derives the `Serialize` and `Deserialize` traits from [`serde`](https://crates.io/crates/serde) for the `ZalgoString` struct.
serde = ["dep:serde"]

# Derives the `Serialize`, `Deserialize`, and `Archive` traits from [`rkyv`](https://crates.io/crates/rkyv) for the `ZalgoString` struct.
rkyv = ["dep:rkyv", "dep:bytecheck"]

# Enables the `Error` type to capture a `Backtrace`.
# Without this feature the crate is `no_std` compatible, but still uses the `alloc` crate.
std = ["serde?/std", "rkyv?/std", "bytecheck?/simdutf8"]

[[bench]]
name = "codec_bench"
harness = false
