[package]
name = "zalgo-codec-macro"
version = "0.1.26"
edition = "2021"
keywords = ["unicode", "obfuscation", "encoding", "zalgo"]
categories = ["encoding", "text-processing"]
authors = ["Alex Keizer <alex@keizer.dev>", "Johanna Sörngård <jsorngard@gmail.com>"]
description = "Provides the zalgo_embed! macro for compiling source code that's been converted into a single grapheme cluster by the zalgo-codec-common crate"
repository = "https://github.com/JSorngard/zalgo_codec/tree/main/macro"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
zalgo-codec-common = {path = "../common"}
syn = "2.0"
