[package]
name = "zalgofy"
authors = ["Johanna Sörngård (jsorngard@gmail.com)"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/JSorngard/zalgo_codec"
description = "A thin wrapper program around the codec that zalgo encodes some input, either a file or text on the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
zalgo-codec-common = {path = "../common"}

[features]
default = ["files"]
files = ["zalgo-codec-common/files"]
