[package]
name = "zalgo-codec-common-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.zalgo-codec-common]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "zalgostring_new"
path = "fuzz_targets/fuzz_zalgostring_new.rs"
test = false
doc = false

[[bin]]
name = "zalgostring_push_str"
path = "fuzz_targets/fuzz_zalgostring_push_str.rs"
test = false
doc = false